// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RippleStoryshots Organisms/HeroBanner Default 1`] = `
<div
  class="rpl-hero-banner rpl-site-constrain--on-all rpl-hero-banner--has-logo"
  style="background-image: url(/bggraphiclower.png);"
>
  <div
    class="rpl-row"
  >
    <div
      class="rpl-hero-banner__left"
    >
      <img
        alt=""
        class="rpl-hero-banner__logo"
        src="/herologo.png"
      />
    </div>
  </div>
   
  <div
    class="rpl-row"
  >
    <div
      class="rpl-hero-banner__left"
    >
      <h1
        class="rpl-hero-banner__title"
      >
        <span>
          This is display copy that wraps 2 lines
        </span>
      </h1>
       
      <p
        class="rpl-hero-banner__description"
      >
        
        This is supplementary intro text that can also wrap over a couple of lines.
      
      </p>
       
    </div>
     
    <div
      class="rpl-hero-banner__right"
    >
      <h2
        class="rpl-hero-banner__link-heading"
      >
        
        Want to know more about...
      
      </h2>
       
      <ul
        class="rpl-hero-banner__link-list"
      >
        <li
          class="rpl-hero-banner__link-list-item"
        >
          <a
            class="rpl-link rpl-text-link rpl-hero-banner__link rpl-text-link--underline"
            data-print-url="#"
            href="#"
          >
            <span
              class="rpl-link__inner"
            >
              <span
                class="rpl-text-label rpl-text-label--large rpl-text-label--large--underline"
              >
                <span>
                  <span>
                    First journey based
                  </span>
                   
                  <span
                    class="rpl-text-icon__group"
                  >
                     link
                    <!---->
                  </span>
                </span>
              </span>
            </span>
          </a>
        </li>
        <li
          class="rpl-hero-banner__link-list-item"
        >
          <a
            class="rpl-link rpl-text-link rpl-hero-banner__link rpl-text-link--underline"
            data-print-url="#"
            href="#"
          >
            <span
              class="rpl-link__inner"
            >
              <span
                class="rpl-text-label rpl-text-label--large rpl-text-label--large--underline"
              >
                <span>
                  <span>
                    Secondary journey based
                  </span>
                   
                  <span
                    class="rpl-text-icon__group"
                  >
                     link
                    <!---->
                  </span>
                </span>
              </span>
            </span>
          </a>
        </li>
        <li
          class="rpl-hero-banner__link-list-item"
        >
          <a
            class="rpl-link rpl-text-link rpl-hero-banner__link rpl-text-link--underline"
            data-print-url="#"
            href="#"
          >
            <span
              class="rpl-link__inner"
            >
              <span
                class="rpl-text-label rpl-text-label--large rpl-text-label--large--underline"
              >
                <span>
                  <span>
                    Third link goes
                  </span>
                   
                  <span
                    class="rpl-text-icon__group"
                  >
                     here
                    <!---->
                  </span>
                </span>
              </span>
            </span>
          </a>
        </li>
        <li
          class="rpl-hero-banner__link-list-item"
        >
          <a
            class="rpl-link rpl-text-link rpl-hero-banner__link rpl-text-link--underline"
            data-print-url="#"
            href="#"
          >
            <span
              class="rpl-link__inner"
            >
              <span
                class="rpl-text-label rpl-text-label--large rpl-text-label--large--underline"
              >
                <span>
                  <span>
                    Fourth journey based
                  </span>
                   
                  <span
                    class="rpl-text-icon__group"
                  >
                     link
                    <!---->
                  </span>
                </span>
              </span>
            </span>
          </a>
        </li>
         
        <li
          class="rpl-hero-banner__link-list-item"
        >
          <a
            class="rpl-link rpl-text-link rpl-hero-banner__more-link rpl-text-link--underline"
            data-print-url="#"
            href="#"
          >
            <span
              class="rpl-link__inner"
            >
              <span
                class="rpl-text-label rpl-text-label--large rpl-text-label--large--underline rpl-text-label--emphasis"
              >
                <span>
                  <span>
                    See
                  </span>
                   
                  <span
                    class="rpl-text-icon__group"
                  >
                     more
                    <!---->
                  </span>
                </span>
              </span>
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Organisms/HeroBanner Intro Banner 1`] = `
<div
  class="rpl-intro-banner rpl-site-constrain--on-all"
>
  <div
    class="rpl-row"
  >
    <div
      class="rpl-intro-banner__left"
    >
      <h2
        class="rpl-intro-banner__title"
      >
        <span>
          Welcome to Victoria Police Museum
        </span>
      </h2>
       
      <p
        class="rpl-intro-banner__description"
      >
        From the largest collection of Kelly Gang armour in Australia to forensic evidence from some of Melbourne's most notorious crimes, the Victoria Police Museum presents visitors with an intriguing insight into the social history of policing and crime.
      </p>
    </div>
     
    <div
      class="rpl-intro-banner__right"
    >
      <!---->
       
      <ul
        class="rpl-intro-banner__link-list"
      >
        <li
          class="rpl-intro-banner__link-list-item"
        >
          <a
            class="rpl-link rpl-text-link rpl-intro-banner__link rpl-text-link--underline"
            data-print-url="#"
            href="#"
          >
            <span
              class="rpl-link__inner"
            >
              <span
                class="rpl-text-label rpl-text-label--large rpl-text-label--large--underline"
              >
                <span>
                  <span>
                    Plan your
                  </span>
                   
                  <span
                    class="rpl-text-icon__group"
                  >
                     visit
                    <!---->
                  </span>
                </span>
              </span>
            </span>
          </a>
        </li>
        <li
          class="rpl-intro-banner__link-list-item"
        >
          <a
            class="rpl-link rpl-text-link rpl-intro-banner__link rpl-text-link--underline"
            data-print-url="#"
            href="#"
          >
            <span
              class="rpl-link__inner"
            >
              <span
                class="rpl-text-label rpl-text-label--large rpl-text-label--large--underline"
              >
                <span>
                  <!---->
                   
                  <span
                    class="rpl-text-icon__group"
                  >
                    Collections
                    <!---->
                  </span>
                </span>
              </span>
            </span>
          </a>
        </li>
        <li
          class="rpl-intro-banner__link-list-item"
        >
          <a
            class="rpl-link rpl-text-link rpl-intro-banner__link rpl-text-link--underline"
            data-print-url="#"
            href="#"
          >
            <span
              class="rpl-link__inner"
            >
              <span
                class="rpl-text-label rpl-text-label--large rpl-text-label--large--underline"
              >
                <span>
                  <span>
                    School
                  </span>
                   
                  <span
                    class="rpl-text-icon__group"
                  >
                     Programs
                    <!---->
                  </span>
                </span>
              </span>
            </span>
          </a>
        </li>
        <li
          class="rpl-intro-banner__link-list-item"
        >
          <a
            class="rpl-link rpl-text-link rpl-intro-banner__link rpl-text-link--underline"
            data-print-url="#"
            href="#"
          >
            <span
              class="rpl-link__inner"
            >
              <span
                class="rpl-text-label rpl-text-label--large rpl-text-label--large--underline"
              >
                <span>
                  <span>
                    Group
                  </span>
                   
                  <span
                    class="rpl-text-icon__group"
                  >
                     Bookings
                    <!---->
                  </span>
                </span>
              </span>
            </span>
          </a>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`RippleStoryshots Organisms/HeroBanner with CTA 1`] = `
<div
  class="rpl-hero-banner rpl-hero-banner--cta rpl-site-constrain--on-all rpl-hero-banner--cta-light"
>
  <!---->
   
  <div
    class="rpl-row"
  >
    <div
      class="rpl-hero-banner__left"
    >
      <h1
        class="rpl-hero-banner__title"
      >
        <span>
          This is display copy that wraps 2 lines
        </span>
      </h1>
       
      <p
        class="rpl-hero-banner__description"
      >
        
        This is supplementary intro text that can also wrap over a couple of lines.
      
      </p>
       
      <div
        class="rpl-hero-banner--cta__left-bottom"
      >
        <a
          class="rpl-link rpl-button rpl-hero-banner--cta__primary rpl-button--primary"
          data-print-url="#"
          href="#"
        >
          <span
            class="rpl-link__inner"
          >
            Call to action
          </span>
        </a>
         
        <div
          class="rpl-hero-banner--cta__secondary"
        >
          <p
            class="rpl-hero-banner--cta__secondary-text"
          >
            Not ready yet?
          </p>
           
          <a
            class="rpl-link rpl-text-link rpl-hero-banner--cta__secondary-link"
            data-print-url="#"
            href="#"
          >
            <span
              class="rpl-link__inner"
            >
              <span
                class="rpl-text-label"
              >
                <span>
                  <span>
                    Subscribe for tips to
                  </span>
                   
                  <span
                    class="rpl-text-icon__group"
                  >
                     prepare
                    <!---->
                  </span>
                </span>
              </span>
            </span>
          </a>
        </div>
      </div>
    </div>
     
    <div
      class="rpl-hero-banner__right"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;
